--- a/css/ncp_main.css
+++ b/css/ncp_main.css
@@ -13,10 +13,6 @@ body
     font-family: Arial, Helvetica, sans-serif;
     }
 
-ul {
-	font-size: 1.1em;
-}
-
 div#spacer
     {
     height: 30px;
@@ -31,6 +27,12 @@ div#container
     background-color: #FFFFFF;
     }
 	
+	
+div#content ul {
+    padding-left: 20px;
+    font-size: 1.1em;
+}
+
 div#containerhome
     {
     position: relative;
